# src/main/java/com/example/bankcards/entity/User.java
@@ -1,5 +1,6 @@
 package com.example.bankcards.entity;
 
+import com.example.bankcards.openapi.model.UserRole;
 import jakarta.persistence.*;
 import lombok.EqualsAndHashCode;
 import lombok.Getter;
@@ -18,10 +19,17 @@ public class User {
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
 
-    private String name;
+    private String login;
 
-    public User(String name) {
-        this.name = name;
+    private String password;
+
+    @Enumerated(EnumType.STRING)
+    private UserRole role;
+
+    public User(String login, String password, UserRole role) {
+        this.login = login;
+        this.password = password;
+        this.role = role;
     }
 
 }
